--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=7788
+server.servlet.context-path=/matrimonyapp
 
+#DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/matrimony
+spring.datasource.username=root
+spring.datasource.password=bala
+
+spring.jpa.hibernate.ddl-auto=update
