--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port = 7777
+
+server.servlet.context-path=/matrimony
+
+spring.datasource.url=jdbc:mysql://localhost:3306/matrimony
+spring.datasource.username=root
+spring.datasource.password=12345
+
+spring.jpa.hibernate.ddl-auto=update
+
+sonar.host.url = http://localhost/9000
+
+
 
